--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,47 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "App": {
+    "BasePath":  ""
+  },
+  "AllowedHosts": "*",
+  "OTCS": {
+    "Username": "admin",
+    "Secret": "P@ssw0rd",
+    "Url": "http://192.168.1.225/otcs/cs.exe/api"
+  },
+  "NLog": {
+    "internalLogLevel": "Off",
+    "internalLogFile": "",
+    "autoReload": true,
+    "throwConfigExceptions": true,
+    "targets": {
+      "logfile": {
+        "type": "File",
+        "fileName": "./logs/cc-${shortdate}.log",
+        "layout": "${longdate} | ${level:uppercase=true} | ${callsite}(${callsite-linenumber}) | ${message} ${exception:format=StackTrace}"
+      },
+      "logconsole": {
+        "type": "ColoredConsole",
+        "layout": "${longdate} | ${level:uppercase=true} | ${callsite}(${callsite-linenumber}) | ${message} ${exception:format=StackTrace}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "Microsoft.*",
+        "maxLevel": "Fatal",
+        "final": true
+      },
+      {
+        "logger": "System.*",
+        "maxLevel": "Fatal",
+        "final": true
+      },
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "logfile,logconsole"
+      }
+    ]
+  }
 }
