--- a/CleverConversion.csproj
+++ b/CleverConversion.csproj
@@ -15,10 +15,14 @@
     <PackageReference Include="GroupDocs.Viewer.UI.Api.Local.Storage" Version="8.1.1" />
     <PackageReference Include="GroupDocs.Viewer.UI.SelfHost.Api" Version="8.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="NLog" Version="6.0.4" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="6.0.4" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="6.0.4" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Files\" />
     <Folder Include="Cache\" />
   </ItemGroup>
 
