--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
   "OTCS": {
     "Username": "admin",
     "Secret": "P@ssw0rd",
-    "Url": "http://192.168.1.225/otcs/cs.exe/api"
+    "ApiUrl": "http://192.168.1.225/otcs/cs.exe/api"
   },
   "NLog": {
     "internalLogLevel": "Off",
