feat: disable https redirection

--- a/CleverConversion.csproj
+++ b/CleverConversion.csproj
@@ -24,6 +24,16 @@
 
   <ItemGroup>
     <Folder Include="Cache\" />
+    <Folder Include="Files\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Cache\.gitkeep">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\.gitkeep">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
