--- a/CleverConversion.csproj
+++ b/CleverConversion.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -10,8 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GroupDocs.Annotation" Version="24.12.0" />
-    <PackageReference Include="GroupDocs.Conversion" Version="25.9.0" />
+    <PackageReference Include="GroupDocs.Total" Version="25.8.0" />
     <PackageReference Include="GroupDocs.Viewer.UI" Version="8.1.1" />
     <PackageReference Include="GroupDocs.Viewer.UI.Api.Local.Cache" Version="8.1.1" />
     <PackageReference Include="GroupDocs.Viewer.UI.Api.Local.Storage" Version="8.1.1" />
