--- a/CleverConversion.csproj
+++ b/CleverConversion.csproj
@@ -21,10 +21,12 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="6.0.4" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="6.0.4" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="YamlDotNet.NetCore" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Cache\" />
+    <Folder Include="Common\Annotation\Controllers\" />
     <Folder Include="Files\" />
   </ItemGroup>
 
