--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "App": {
-    "BasePath":  ""
+    "BasePath": "",
+    "Annotation": {
+      "AllowedExts":  [".pdf", ".docx"]
+    }
   },
   "AllowedHosts": "*",
   "OTCS": {
