--- a/CleverConversion.csproj
+++ b/CleverConversion.csproj
@@ -36,6 +36,9 @@
     <None Update="Files\.gitkeep">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="License\GroupDocs.Totalfor.NET.lic">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
