--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "App": {
-    "BasePath": "",
+    "BasePath": "/cleverconversion",
     "Annotation": {
       "AllowedExts":  [".pdf", ".docx"]
     }
