--- a/CleverConversion.csproj
+++ b/CleverConversion.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AsyncKeyedLock" Version="7.1.7" />
 	<PackageReference Include="System.Text.Encodings.Web" Version="9.0.0" />
     <PackageReference Include="GroupDocs.Total" Version="25.8.0" />
     <PackageReference Include="GroupDocs.Viewer.UI" Version="8.1.1" />
